[package]
name = "life"
version = "0.1.0"
edition = "2024"
description = "Conway's Game of Life in Quartz."

[dependencies]
image = "0.25.6"
ramp = { package = "ramp2", path = "../ramp" }
quartz = { path = "../quartz" }
rodio = "0.21.1"
rand = "0.9.2"
rgb = "0.8.52"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "time", "net"] }

[lib]
name = "main"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.android]
package = "com.life"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
